--- a/app/templates/admin/plans/list.html
+++ b/app/templates/admin/plans/list.html
@@ -1,32 +1,32 @@
 {% extends "base.html" %}
 {% block title %}
-    Plan
+    {{ title }}
 {% endblock %}
 {% block body %}
     <div class="outer">
         <div class="middle">
             <div class="center">
                 <div class="page-header">
-                    <h1>Plan</h1>
+                    <h1> {{ title }} </h1>
                 </div>
 
-                <div style="text-align: center">
-                    <a href="{{ url_for('admin.add_plan_semester') }}" class="btn btn-default btn-lg">
-                        <i class="fa fa-plus"></i> Add plan semester
-                    </a>
-                </div>
-                <br>
-                <div style="text-align: center">
-                    <a href="{{ url_for('admin.add_plan_day') }}" class="btn btn-default btn-lg">
-                        <i class="fa fa-plus"></i> Add plan day
-                    </a>
-                </div>
-                <br>
-                <div style="text-align: center">
-                    <a href="{{ url_for('admin.add_plan') }}" class="btn btn-default btn-lg">
-                        <i class="fa fa-plus"></i> Add plan
-                    </a>
-                </div>
+                <ul class="nav nav-pills">
+                    <li role="presentation">
+                        <a href="{{ url_for('admin.add_plan_semester') }}" class="btn btn-lg">
+                            <i class="fa fa-plus"></i> Add plan semester
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="{{ url_for('admin.add_plan_day') }}" class="btn btn-lg">
+                            <i class="fa fa-plus"></i> Add plan day
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="{{ url_for('admin.add_plan') }}" class="btn btn-lg">
+                            <i class="fa fa-plus"></i> Add plan
+                        </a>
+                    </li>
+                </ul>
 
                 {% if educationPlan %}
                     <table class="table table-striped table-bordered">
@@ -51,12 +51,12 @@
                                 <td> {{ plan.lessonNumber }} </td>
                                 <td>
                                     <a href="{{ url_for('admin.edit_plan', id=plan.id) }}">
-                                        <i class="fa fa-trash"></i> edit
+                                        <i class="fas fa-pencil-alt"></i> edit
                                     </a>
                                 </td>
                                 <td>
                                     <a href="{{ url_for('admin.delete_plan', id=plan.id) }}">
-                                        <i class="fa fa-trash"></i> delete
+                                        <i class="fas fa-trash"></i> delete
                                     </a>
                                 </td>
                             </tr>
@@ -67,11 +67,23 @@
                     <div class="alert alert-warning" role="alert">No planes.</div>
                 {% endif %}
 
-                <div style="text-align: center">
-                    <a href="{{ url_for('admin.add_plan') }}" class="btn btn-default btn-lg">
-                        <i class="fa fa-plus"></i> Add plan
-                    </a>
-                </div>
+                <ul class="nav nav-pills">
+                    <li role="presentation">
+                        <a href="{{ url_for('admin.add_plan_semester') }}" class="btn btn-lg">
+                            <i class="fas fa-plus"></i> Add plan semester
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="{{ url_for('admin.add_plan_day') }}" class="btn btn-lg">
+                            <i class="fas fa-plus"></i> Add plan day
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="{{ url_for('admin.add_plan') }}" class="btn btn-lg">
+                            <i class="fas fa-plus"></i> Add plan
+                        </a>
+                    </li>
+                </ul>
                 <br>
             </div>
         </div>
