--- a/app/templates/admin/subjects/list.html
+++ b/app/templates/admin/subjects/list.html
@@ -9,7 +9,7 @@
             </div>
             <div style="text-align: center">
                 <a href="{{ url_for('admin.add_subject') }}" class="btn btn-default btn-lg">
-                    <i class="fa fa-plus"></i> Add Subject
+                    <i class="fas fa-plus"></i> Add Subject
                 </a>
             </div>
 
@@ -18,8 +18,8 @@
                 <thead>
                 <tr>
                     <th width="10%"> ID </th>
-                    <th width="50%"> Name </th>
-                    <th width="10%"> Teacher Count </th>
+                    <th width="40%"> Name </th>
+                    <th width="20%"> Teacher Count </th>
                     <th width="15%"> Edit </th>
                     <th width="15%"> Delete </th>
                 </tr>
@@ -32,12 +32,12 @@
                         <td> {{ subject.teacher_subject_id.count() }} </td>
                         <td>
                             <a href="{{ url_for('admin.edit_subject', id=subject.id) }}">
-                                <i class="fa fa-pencil"></i> edit
+                                <i class="fas fa-pencil-alt"></i> edit
                             </a>
                         </td>
                         <td>
                             <a href="{{ url_for('admin.delete_subject', id=subject.id) }}">
-                                <i class="fa fa-trash"></i> delete
+                                <i class="fas fa-trash"></i> delete
                             </a>
                         </td>
                     </tr>
