--- a/app/templates/admin/users/users.html
+++ b/app/templates/admin/users/users.html
@@ -13,7 +13,7 @@
 
             <div style="text-align: center">
                 <a href="{{ url_for('admin.add_user') }}" class="btn btn-default btn-lg">
-                    <i class="fa fa-plus"></i> Add User
+                    <i class="fas fa-plus"></i> Add User
                 </a>
             </div>
 
@@ -25,7 +25,8 @@
                         <th width="13%"> Login </th>
                         <th width="15%"> Mail </th>
                         <th width="15%"> Telephone </th>
-                        <th width="15%"> Role </th>
+                        <th width="10%"> Role </th>
+                        <th width="5%"> Sex </th>
                         <th width="10%"> Edit </th>
                         <th width="10%"> Delete </th>
                     </tr>
@@ -36,6 +37,7 @@
                             <tr style="background-color: #138d75; color: white;">
                                 <td> <i class="fa fa-key"></i> Admin </td>
                                 <td> {{ user.username }} </td>
+                                <td> N/A </td>
                                 <td> N/A </td>
                                 <td> N/A </td>
                                 <td> N/A </td>
@@ -66,13 +68,22 @@
                                 </td>
                                 <td> {{ user.roles.name }} </td>
                                 <td>
+                                <h4>
+                                    {% if user.is_man %}
+                                        <i class="fas fa-mars"></i>
+                                    {% else %}
+                                        <i class="fas fa-venus"></i>
+                                    {% endif %}
+                                </h4>
+                                </td>
+                                <td>
                                     <a href="{{ url_for('admin.edit_user', id=user.id) }}">
-                                        <i class="fa fa-pencil"></i> Edit
+                                        <i class="fas fa-pencil-alt"></i> edit
                                     </a>
                                 </td>
                                 <td>
                                     <a href="{{ url_for('admin.delete_user', id=user.id) }}">
-                                        <i class="fa fa-trash"></i> Delete
+                                        <i class="fas fa-trash"></i> <d></d>elete
                                     </a>
                                 </td>
                             </tr>
@@ -86,7 +97,7 @@
 
             <div style="text-align: center">
                 <a href="{{ url_for('admin.add_user') }}" class="btn btn-default btn-lg">
-                    <i class="fa fa-plus"></i> Add User
+                    <i class="fas fa-plus"></i> Add User
                 </a>
             </div>
             </br>
