--- a/app/templates/classes/listStudentToClass.html
+++ b/app/templates/classes/listStudentToClass.html
@@ -21,7 +21,7 @@
                     <div style="text-align: center">
                         <a href="{{ url_for('classes.add_student', id=oneClass.id) }}"
                            class="btn btn-default btn-lg">
-                            <i class="fa fa-plus"></i> Add Student to Class
+                            <i class="fas fa-plus"></i> Add Student to Class
                         </a>
                     </div>
 
@@ -42,7 +42,7 @@
                                 </td>
                                 <td>
                                     <a href="{{ url_for('classes.delete_student', id_student=student.users.id, id_class=oneClass.id) }}">
-                                        <i class="fa fa-trash"></i> delete bind
+                                        <i class="fas fa-trash"></i> delete bind
                                     </a>
                                 </td>
                             </tr>
@@ -53,7 +53,7 @@
                     <div style="text-align: center">
                         <a href="{{ url_for('classes.add_student', id=oneClass.id) }}"
                            class="btn btn-default btn-lg">
-                            <i class="fa fa-plus"></i> Add Student to Class
+                            <i class="fas fa-plus"></i> Add Student to Class
                         </a>
                     </div>
                 {% endif %}
