--- a/app/templates/home/teacher_dashboard_all.html
+++ b/app/templates/home/teacher_dashboard_all.html
@@ -43,10 +43,7 @@
                 <div class="panel-heading">Subjects:</div>
                 <ul class="list-group">
                     {% for subject in subjects %}
-                        <a href="{{ url_for('admin.list_schedule_teacher', id_subject=subject.id, id_day=1) }}" class="list-group-item list-group-item-info">
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                            {{ subject.subjects.name }}
-                        </a>
+                        <li class="list-group-item">{{ subject.subjects.name }}</li>
                     {% endfor %}
                 </ul>
             </div>
