--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container-fluid">
-        <iv class="navbar-header">
+        <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">SchoolDB</a>
-        </iv>
+        </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
