--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,25 +40,25 @@
                         <li><a href="{{ url_for('admin.list_room_specializations') }}">Room Spec</a></li>
                         <li>
                             <a href="{{ url_for('home.admin_dashboard') }}">
-                                <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}!
                             </a>
                         </li>
                     {% elif current_user.role_id==3 %}
                         <li>
                             <a href="{{ url_for('home.parent_dashboard',id=current_user.id) }}">
-                                <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}!
                             </a>
                         </li>
                     {% elif current_user.role_id==2 %}
                         <li>
                             <a href="{{ url_for('home.student_dashboard',id=current_user.id) }}">
-                                <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}!
                             </a>
                         </li>
                     {% elif current_user.role_id==1 %}
                         <li>
                             <a href="{{ url_for('home.teacher_dashboard',id=current_user.id) }}">
-                                <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}!
                             </a>
                         </li>
                     {% else %}
@@ -123,25 +123,25 @@
                             <li><a href="{{ url_for('admin.list_room_specializations') }}">Room Spec</a></li>
                             <li>
                                 <a href="{{ url_for('home.admin_dashboard') }}">
-                                    <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                    <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}
                                 </a>
                             </li>
                         {% elif current_user.role_id==3 %}
                             <li>
                                 <a href="{{ url_for('home.parent_dashboard',id=current_user.id) }}">
-                                    <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                    <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}
                                 </a>
                             </li>
                         {% elif current_user.role_id==2 %}
                             <li>
                                 <a href="{{ url_for('home.student_dashboard',id=current_user.id) }}">
-                                    <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                    <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}
                                 </a>
                             </li>
                         {% elif current_user.role_id==1 %}
                             <li>
                                 <a href="{{ url_for('home.teacher_dashboard',id=current_user.id) }}">
-                                    <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
+                                    <i class="fa fa-user"></i> Hi, {{ current_user.first_name }}
                                 </a>
                             </li>
                         {% else %}
